# steam-patch

./: Cargo.toml  LICENSE  README.md  install.sh  restart-steam-patch-on-boot.service  steam-patch.service  steam-patch.spec  steamos-priv-write-updated  uninstall.sh
.github/workflows/: build.yaml  rust.yml
src/: key_mapper.rs  main.rs  patch.rs  server.rs  steam.rs  utils.rs
src/devices/: device_ally.rs  device_ally_tdp_only.rs  device_ayaneo_2.rs  device_ayaneo_2s.rs  device_generic.rs  device_gpd_wm2.rs  mod.rs
src/server/: utils.rs
src/server/services/: set_tdp.rs
src/steam/: patches.rs
