[package]
name = "steam-patch"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = { features = ["macros"], default-features = false, version = "4.0.1" }
reqwest = { version = "0.11", features = ["blocking", "json"], default-features = false }
tokio = { version = "1", default-features = false }
serde = { version = "1.0", default-features = false, features=["derive"] }
serde_json = { default-features = false, version = "1.0.81" }
tungstenite = "0.19.0"
dirs = "5.0.1"
actix-cors = "0.6.4"
notify = { version = "6.0.1", default-features = false }
futures = { default-features = false, version = "0.3" }
sysinfo = { default-features = false, version = "0.29.4" }
regex = "1"
evdev = "0.12.1"

[profile.release]
opt-level = 0     # Optimize for size
debug = true
# lto = true          # Enable link-time optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*
